2006-12-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/xml-template.scm
	  Use sxml:attr to get id attribute, and drop id-table slot
	  in <kahua:xml-template>.

2006-12-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-httpd.scm
	  Fix that applied uri-decode-string to query string twice.

2006-12-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configure.ac
	  Change default value of KAHUA_STATICDIR(--with-staticdir) from
	  /var/www/kahua to ${localstatedir}/var/kahua/static.

2006-12-17  SHIBATA Tomohisa  <shibata@kahua.org>

	* Change: src/kahua/server.scm
	  Add support :rest keyword to define-entry-method.

2006-12-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Use sxml:string->xml-bis instead of sxml:string->xml(again).

2006-12-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Handle properly content of script/style element.

	* 0.9.1 released.

	* Fix: src/kahua/server.scm
	  Use &#39; intead of &apos; as entity reference of ', because
	  Internet Explorer(IE) cannot recognize &apos; in XHTML (I
	  checked it on IE6SP2 on Windows XP SP2).

2006-12-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.9 released.

	* Add: src/kahua/elem.scm
	  New virtual node: when/ unless/ and when: unless:

	* Change: src/kahua/elem.scm
	  #f is simply ignored in content of node(element).
	  ex. ((div/ #f (p/ "hoge")) '()) => ((div (p "hoge")))
	      (div: #f (p: "hoge"))       => (div (p "hoge"))

	* Change: src/kahua/elem.scm
	  Drop obj->string and html:element?.  If you'd like to change a object
	  appearance in SXML, just use x->string.
	  

	* Fix: doc/Modules/kahua.elem.ja
	  Tagged empty and get as [constant] instead of [procedure] or [variable].

2006-12-13  Katsutoshi Itoh  <cut-sea@kahua.org>

	* Add explanation of !contain for doc/Module/kahua.test.xml.ja.

2006-12-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: (src/kahua/server.scm):