@@ -1,5 +1,9 @@
 2006-12-19  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Add: src/kahua/xml-template.scm
+	  Now can handle partial XML template. Its character encoding
+	  must be UTF-8 and must not have XML declaration.
+
 	* Fix: src/kahua/xml-template.scm
 	  Use sxml:attr to get id attribute, and drop id-table slot
 	  in <kahua:xml-template>.
